--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ fastapi==0.109.0
 starlette==0.35.1
 asyncpg==0.29.0
 uvicorn==0.25.0
+pydantic==2.6.3
 
 jsonschema==4.20.0
 xmlschema==3.0.1
 PyYAML==6.0.1
-cryptography==41.0.7
+cryptography==42.0.5
 Jinja2==3.1.3
 
 
