--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,14 @@ fastapi==0.109.0
 starlette==0.35.1
 asyncpg==0.29.0
 uvicorn==0.25.0
+SQLAlchemy==2.0.28
 pydantic==2.6.3
 
 jsonschema==4.20.0
 xmlschema==3.0.1
 PyYAML==6.0.1
 cryptography==42.0.5
-Jinja2==3.1.3
-
+# Jinja2==3.1.3
 
 httpx==0.26.0
 pytest==7.4.4
