соединился с базой + ренейминг

--- a/config/app_dev.yml
+++ b/config/app_dev.yml
@@ -1,11 +1,11 @@
 app:
 
-  log: DEBUG            # допустимые уровни логирования DEBUG, INFO, WARNING, ERROR, FATAL
-  timing: FATAL         # при достижении параметром log этого уровня становятся видным время исполнения запросов
+  log: d            # допустимые уровни логирования DEBUG, INFO, WARNING, ERROR, FATAL
+  timing: f         # при достижении параметром log этого уровня становятся видным время исполнения запросов
   log_format: '%(levelname).1s: %(req_id)s: %(filename)s/%(funcName)s(%(lineno)s): %(message)s'
 
   uvicorn:
     log: error
-    host: 0.0.0.0       # технический адрес WSGI сервера (продуктового)
+    host: 0.0.0.0       # технический адрес ASGI сервера (продуктового)
     port: 8000          # порт, который слушает приложение
-    workers: 1
+    workers: 1          # количество рабочих процессов = количество_ядер * количество_потоков_ядра + 1
