чтение метаданных БД + обработка ошибок соединения

--- a/config/db_dev.yml
+++ b/config/db_dev.yml
@@ -1,5 +1,5 @@
 db:     # удалённая база Ульянова
-  name: neondb
+  name: asyncpg
   db_schema: public
   host: ep-snowy-limit-67291163-pooler.eu-central-1.aws.neon.tech
   port: 5432
