--- a/config/db_dev.yml
+++ b/config/db_dev.yml
@@ -5,8 +5,8 @@ db:     # удалённая база Ульянова
   port: 5432
   user: AUlyanoff
   password: me5zLZGsNV8i
-  pool_size: 5
-  pool_overflow: 40
+#  pool_size: 5
+#  pool_overflow: 40
 #  #"Эта база лежит на бесплатном сервисе размещения PostgreSQL где-то у американцев на Neon
 #  #https://console.neon.tech/app/projects/long-voice-42808384
 #  #авторизация через gitHub - то есть идешь на Neon, но авторизуешься своим gitHub (в это время ты должен быть авторизован)
